feat: add image and button in html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
 <body>
 
+    <img id="light-bulb-image" src="./img/white_lamp.png" alt="Lampadina spenta">
 
+    <button id="switch-button" type="button">Accendi</button>
 
     <script src="./js/main.js"></script>
     
